[project]
name = "email-env-ai"
version = "0.1.0"
description = "Email triage OpenEnv environment"
authors = [{name = "Khushi"}]

dependencies = [
    "fastapi",
    "uvicorn",
    "pydantic",
    "openenv-core>=0.2.0"
]

[project.scripts]
server = "app:app"

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"
